[workspace]
members = [
    "programs/geas",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["geas core <contact@geas.xyz>"]
license = "MIT"
repository = "https://github.com/Geasfun/geas"
homepage = "https://geas-gamma.vercel.app"
readme = "README.md"
rust-version = "1.78"
description = "Vested-token early liquidity market on Solana"
keywords = ["solana", "anchor", "vesting", "defi", "otc"]
categories = ["cryptography", "finance"]

[workspace.dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
solana-program = "=2.1.0"
solana-sdk = "=2.1.0"
solana-client = "=2.1.0"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
bs58 = "0.5"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
